Fix layout issues.

--- a/data/styles.css
+++ b/data/styles.css
@@ -45,11 +45,6 @@
     text-decoration: underline;
 }
 
-.margin-bottom-hack
-{
-    margin-bottom: 15rem;
-}
-
 .container::after {
   content: "";
   clear: both;
@@ -161,6 +156,7 @@ a
 section
 {
     padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
 main.inner, main.expanded-inner, main .expanded-inner
@@ -243,24 +239,6 @@ img
     image-orientation: from-image;
 }
 
-@media only screen and (max-width: 600px) {
-    .os-warning
-    {
-        margin-left: 0;
-        margin-right: 0;
-    }
-    
-    .right-floating, .left-floating
-    {
-        margin-bottom: 1em;
-    }
-    
-    .inner-desktop hr
-    {
-        display: none;
-    }
-}
-
 .centered
 {
     margin: 0 auto;
@@ -268,8 +246,32 @@ img
     margin-bottom: 1rem;
 }
 
-@media only screen and (min-width: 600px)
+
+.os-warning
 {
+    margin-left: 0;
+    margin-right: 0;
+}
+    
+.right-floating, .left-floating
+{
+    margin-bottom: 1em;
+}
+    
+.inner-desktop hr
+{
+    display: none;
+}
+
+
+@media only screen and (min-width: 730px)
+{
+    
+    .margin-bottom-hack
+    {
+        margin-bottom: 12rem;
+    }
+    
     .inner-desktop
     {
         padding-left: 1.2em;
@@ -529,11 +531,6 @@ img
     margin-top: 0;
 }
 
-section
-{
-    padding-bottom: 3rem;
-}
-
 .button:hover
 {
     background-color: #b32253;
@@ -557,6 +554,11 @@ p
     margin-bottom:1em;
     line-height: 1.5em;
     font-size: 1.08rem;
+}
+
+p:last-child
+{
+    margin-bottom: 0;
 }
 
 ul
